--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 0 0 2rem 0;
 }
 .preview .preview__inner {
   display: -webkit-box;
@@ -186,13 +187,19 @@
   width: 100%;
   padding: 2rem 0 0 2rem;
   font-size: 1.3rem;
-  text-align: center;
   color: #333;
+  overflow: hidden;
 }
 
 .preview__button {
   margin-top: 3rem;
   text-align: center;
+}
+
+.text-typed {
+  font-weight: bold;
+  color: #000081be;
+  text-transform: uppercase;
 }
 
 .news {
@@ -204,6 +211,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin: 2rem 0 2rem 0;
 }
 
 .news__inner {
@@ -282,7 +290,7 @@
 
 .programms {
   width: 100%;
-  height: 100%;
+  margin: 2rem 0 2rem 0;
 }
 
 .programms__title {
@@ -293,6 +301,186 @@
   text-align: center;
   text-transform: uppercase;
   padding-bottom: 5rem;
+}
+
+.programms__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.programms__item {
+  width: 32%;
+  min-height: 100%;
+  border: 2px solid rgba(0, 0, 0, 0.815);
+  border-radius: 5px;
+  margin-right: 1rem;
+  margin-bottom: 1rem;
+  background-color: #fff;
+}
+.programms__item:nth-child(3n) {
+  margin-right: 0;
+}
+.programms__item:hover {
+  border: 3px solid #000081be;
+}
+
+.item__header {
+  width: 100%;
+  height: 40%;
+  overflow: hidden;
+}
+
+.item__img {
+  padding: 1rem 1rem;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.item__img .item__photo {
+  width: 75%;
+}
+
+.item__content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  width: 100%;
+}
+
+.item__body {
+  height: 50%;
+  margin-top: 1rem;
+}
+
+.item__title {
+  width: 100%;
+  text-align: center;
+}
+
+.item__text {
+  padding: 1rem 1rem;
+}
+
+.contacts {
+  width: 100%;
+  height: 100%;
+  margin: 2rem 0 2rem 0;
+  background: #00008111;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts__title {
+  font-size: 2.8rem;
+  font-weight: bold;
+  color: #222;
+  width: 100%;
+  text-align: center;
+  text-transform: uppercase;
+  padding-bottom: 2rem;
+}
+
+.contacts__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 50px;
+}
+
+.contacts__title {
+  font-size: 40px;
+  font-weight: bold;
+}
+
+.contacts__adress {
+  font-size: 22px;
+  width: 50%;
+  text-align: center;
+  padding-bottom: 15px;
+}
+
+.contacts__number {
+  font-size: 22px;
+  font-weight: bold;
+  padding-bottom: 15px;
+  color: #000081be;
+}
+
+.contacts__mail {
+  font-size: 22px;
+  font-weight: bold;
+  color: #000081be;
+}
+
+.socials__icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.socials__link {
+  display: block;
+  width: 32px;
+  height: 45px;
+  margin: 15px 0 0 15px;
+}
+
+.socials__item-icon-ins .socials__link {
+  background: url(../img/socials/ins.png) no-repeat;
+}
+
+.socials__item-icon-ins .socials__link:hover {
+  background: url(../img/socials/ins-hover.png) no-repeat;
+}
+
+.socials__item-icon-vk .socials__link {
+  background: url(../img/socials/vk.png) no-repeat;
+}
+
+.socials__item-icon-vk .socials__link:hover {
+  background: url(../img/socials/vk-hover.png) no-repeat;
+}
+
+.socials__item-icon-face .socials__link {
+  background: url(../img/socials/facebook.png) no-repeat;
+}
+
+.socials__item-icon-face .socials__link:hover {
+  background: url(../img/socials/facebook-hover.png) no-repeat;
+}
+
+.socials__item-icon-yt .socials__link {
+  background: url(../img/socials/youtube-hover.png) center no-repeat;
+}
+
+.socials__item-icon-yt .socials__link:hover {
+  background: url(../img/socials/youtube.png) no-repeat;
 }
 
 .overley {
@@ -495,6 +683,25 @@ ul li {
 @media screen and (max-width: 768px) {
   .news__nav {
     display: none;
+  }
+}
+
+/*-----PROGRAMMS-----*/
+@media screen and (max-width: 768px) {
+  .programms__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .programms__item {
+    width: 100%;
   }
 }
 
