--- a/scss/programms.scss
+++ b/scss/programms.scss
@@ -1,6 +1,6 @@
 .programms{
     width: 100%;
-    height: 100%;
+    margin: 2rem 0 2rem 0;
 }
 
 .programms__title{
@@ -11,4 +11,61 @@
     text-align: center;
     text-transform: uppercase;
     padding-bottom: 5rem;
+}
+
+.programms__list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.programms__item{
+    width: 32%;
+    min-height: 100%;
+    border: 2px solid rgba(0, 0, 0, 0.815);
+    border-radius: 5px;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    background-color: #fff;
+    &:nth-child(3n){
+        margin-right: 0;
+    }
+    &:hover{
+        border: 3px solid #000081be
+    }
+}
+
+.item__header{
+    width: 100%;
+    height: 40%;
+    overflow: hidden;
+}
+.item__img{
+    padding: 1rem 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    .item__photo{
+        width: 75%;
+    }
+}
+
+.item__content{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    width: 100%;
+}
+
+.item__body{
+    height: 50%;
+    margin-top: 1rem;
+}
+
+.item__title{
+    width: 100%;
+    text-align: center;
+}
+
+.item__text{
+    padding: 1rem 1rem;
 }
